# random-word-generator

./: .flake8  .gitignore  README.md  pyproject.toml
random_word_generator/: json_merger.py  main.py  safe_get.py  wiktionary_fetcher.py
random_word_generator/merged_json/: adjectival_nouns.json  adjectives.json  adverbs.json  nouns.json  verbs.json
random_word_generator/raw_json/: adjectival_nouns_00.json  adjectival_nouns_01.json  adjectival_nouns_02.json  adjectival_nouns_03.json  adjectival_nouns_04.json  adjectives_00.json  adverbs_00.json  adverbs_01.json  nouns_00.json  nouns_01.json  nouns_02.json  nouns_03.json  nouns_04.json  nouns_05.json  nouns_06.json  nouns_07.json  nouns_08.json  nouns_09.json  nouns_10.json  nouns_11.json  nouns_12.json  nouns_13.json  nouns_14.json  nouns_15.json  nouns_16.json  nouns_17.json  nouns_18.json  nouns_19.json  nouns_20.json  nouns_21.json  nouns_22.json  nouns_23.json  nouns_24.json  nouns_25.json  nouns_26.json  nouns_27.json  nouns_28.json  nouns_29.json  nouns_30.json  nouns_31.json  (+69 more)
tests/: test_random_word_generator.py
