[tool.poetry]
name = "random-word-generator"
version = "0.1.0"
description = "Random Word Generator"
authors = ["mkrydik <mkrydik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mecab-python3 = "^1.0.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
types-requests = "^2.28.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# .flake8 の設定と合わせておく
line-length = 140
